--- a/blog/2024-07-05-how-to-unit-test-your-sql-data-pipelines.mdx
+++ b/blog/2024-07-05-how-to-unit-test-your-sql-data-pipelines.mdx
@@ -52,7 +52,7 @@ Thanks to data pipelines unit testing, we drastically reduce the development cos
 - **Decreased productivity**
     - The absence of automated tests often means manually re-running parts or all of the system to ensure correct integration, which can lead to spending time fixing collateral bugs and thus reducing overall productivity. As the project advances, more components need verification, making the process even more time-consuming. This significantly diminishes the willingness to refactor or revise code.
 - **Promoting expertise**
-    - Without unit tests, teams often assign the same tasks to the same people, which hinders skill development and increases the risk of knowledge loss due to turnover.
+    - Without unit tests, teams often assign the same models to the same people, which hinders skill development and increases the risk of knowledge loss due to turnover.
 - **Customer dissatisfaction**
     - A project with uncertain product output quality often leads to dissatisfaction, frustration, and a loss of trust in the individual, the team, or the product.
 
