--- a/docs/0300-guides/300-transform/100-tutorial.mdx
+++ b/docs/0300-guides/300-transform/100-tutorial.mdx
@@ -86,7 +86,7 @@ metadata/transform
 before running our transform, let's see in what order we should run them by running the following command:
 
 ```bash
-starlake lineage  --task kpi.order_summary --print
+starlake lineage  --model kpi.order_summary --print
 ```
 
 This should produce a acyclic graph showing the order in which the insights should be run. The output should look like this:
@@ -106,7 +106,7 @@ If you installed the [GraphViz tool](../../quickstart#prerequisites-3), you can 
 
 ```bash
 
-starlake lineage --task kpi.order_summary --svg --output lineage.svg
+starlake lineage --model kpi.order_summary --svg --output lineage.svg
 ```
 
 ![](/img/lineage.svg)
