--- a/docs/0500-configuration/0700-platforms/040.gcp.md
+++ b/docs/0500-configuration/0700-platforms/040.gcp.md
@@ -127,7 +127,7 @@ the `Arguments` field as shown below:
 
 Start the `import` job first and then the `watch` job. The execution logs are available in the Dataproc UI:
 
-![tasks runs]( /img/gcloud/runs.png "tasks runs")
+![models runs]( /img/gcloud/runs.png "models runs")
 
 
 Since we ingested data into BigQuery, We find it available in BigQuery datasets and tables 
