--- a/blog/2024-05-28-polars-vs-spark.mdx
+++ b/blog/2024-05-28-polars-vs-spark.mdx
@@ -33,7 +33,7 @@ This post addresses the following points:
 
 
 
-## Load tasks
+## Load models
 
 Data loading seems easy at first glance, as almost all databases and APIs offer some sort of single-line command to load a few lines or millions of records quickly. However, this simplicity disappears when you encounter real-world cases such as:
 
@@ -49,7 +49,7 @@ However, in real-world scenarios, you want to ensure the incoming file adheres t
 As XML and multichar and multiline CSV are only supported by Spark, dealing with file parsing for data loading, Spark is definitely the most suitable solution.
 
 
-## Transform tasks
+## Transform models
 
 Three interfaces are provided to transform data: SQL, Dafarames and Datasets.
 
@@ -69,7 +69,7 @@ As a software engineer, I particularly appreciate Datasets. Datasets are typed D
 
 Datasets are only supported by Spark, allowing you to write clean, reusable, and statically typed transformations. They are available exclusively to statically typed languages such as Java or Scala.
 
-Spark stands out as the only tool with complete support for SQL, DataFrames, and Datasets. Polars’ limited support for SQL makes it less suitable for my data engineering tasks.
+Spark stands out as the only tool with complete support for SQL, DataFrames, and Datasets. Polars’ limited support for SQL makes it less suitable for my data engineering models.
 
 ## Cloud Era
 
