--- a/docs/0300-guides/300-transform/100-tutorial.mdx
+++ b/docs/0300-guides/300-transform/100-tutorial.mdx
@@ -30,7 +30,7 @@ SELECT
     o.timestamp AS order_date,
     SUM(ol.quantity * ol.sale_price) AS total_revenue
 FROM
-    starbake.order o
+    starbake.orders o
     JOIN starbake.order_line ol ON o.order_id = ol.order_id
 GROUP BY
     o.order_id, o.timestamp
@@ -47,9 +47,9 @@ SELECT
     o.order_id,
     o.timestamp AS order_date
 FROM
-    starbake.product p
-        JOIN starbake.order_line ol ON p.product_id = ol.product_id
-        JOIN starbake.order o ON ol.order_id = o.order_id
+    starbake.products p
+        JOIN starbake.order_lines ol ON p.product_id = ol.product_id
+        JOIN starbake.orders o ON ol.order_id = o.order_id
 GROUP BY
     p.product_id,
     o.order_id, p.name, o.timestamp
